--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,28 @@ img {
   padding: 0 2rem;
 }
 
+/* Buttons */
+.btn {
+  display: inline-block;
+  padding: 1.6rem 2.6rem;
+  border: 1px solid var(--secondary-color);
+  border-radius: 32px;
+  background-color: var(--secondary-color);
+  color: #384653;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 0;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+
+.btn:hover {
+  background: var(--primary-color);
+  border-color: #fff;
+  color: #fff;
+}
+
 /* ====== NAVBAR ====== */
 .navbar {
   padding: 1rem 2rem;
@@ -125,13 +147,83 @@ img {
   font-size: 1.2rem;
 }
 
+/* ====== HERO ====== */
+.hero {
+  padding: 11.5rem 2rem 8rem;
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
+    url("../images/header-background.jpg") center center/cover no-repeat;
+  color: #fff;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.hero-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 8rem;
+  gap: 6rem;
+}
+
+.hero h1 {
+  font-size: 3.5rem;
+  line-height: 1.2;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.hero p {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  line-height: 1.8;
+  font-weight: 400;
+}
+
+.hero img {
+  margin-right: -100px;
+  width: 100%;
+}
+
+.hero .frame-decoration {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+}
+
 /* ====== MEDIA QUERIES ====== */
 /* Screens less than 1200 */
 @media screen and (max-width: 1200px) {
+  .hero .hero-flex {
+    gap: 2rem;
+  }
+
+  .hero img {
+    max-width: 500px;
+    margin-right: 0;
+  }
+
+  .hero h1 {
+    font-size: 3rem;
+  }
 }
 
 /* Screens less than 992 */
 @media screen and (max-width: 992px) {
+  .hero {
+    text-align: center;
+  }
+
+  .hero .hero-flex {
+    flex-direction: column;
+    padding-bottom: 4rem;
+  }
+
+  .hero img {
+    max-width: 600px;
+    margin-top: 2rem;
+  }
 }
 
 /* Screens less than 768 */
@@ -152,4 +244,16 @@ img {
 
 /* Screens less than 576 */
 @media screen and (max-width: 576px) {
+  .hero {
+    padding-right: 0.2rem;
+    padding-left: 0.2rem;
+  }
+
+  .hero h1 {
+    font-size: 2.5rem;
+  }
+
+  .hero img {
+    max-width: 350px;
+  }
 }
