--- a/css/styles.css
+++ b/css/styles.css
@@ -70,6 +70,38 @@ img {
   color: #fff;
 }
 
+/* Section Header */
+.section-header {
+  max-width: 750px;
+  margin: 0 auto;
+  text-align: center;
+  margin-bottom: 3rem;
+}
+
+.section-header h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #384653;
+}
+
+.section-header p {
+  font-size: 2rem;
+  font-weight: 700;
+  color: #384653;
+}
+
+.section-header p {
+  font-size: 1.2rem;
+  color: #384653;
+}
+
+.heading-border {
+  width: 64px;
+  height: 4px;
+  background: var(--primary-color);
+  margin: 0 auto 2rem;
+}
+
 /* ====== NAVBAR ====== */
 .navbar {
   padding: 1rem 2rem;
@@ -197,6 +229,32 @@ img {
   height: 100px;
 }
 
+/* ====== LEARN ====== */
+.topics {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 2rem;
+}
+
+.topic {
+  overflow: hidden;
+}
+
+.topic img {
+  width: 100%;
+  transition: transform 0.3s;
+}
+
+.topic img:hover {
+  transform: scale(1.1);
+}
+
+.topic h3 {
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 0.5rem 0;
+}
+
 /* ====== MEDIA QUERIES ====== */
 /* Screens less than 1200 */
 @media screen and (max-width: 1200px) {
@@ -211,6 +269,10 @@ img {
 
   .hero h1 {
     font-size: 3rem;
+  }
+
+  .topics {
+    grid-template-columns: repeat(3, 1fr);
   }
 }
 
@@ -228,6 +290,10 @@ img {
   .hero img {
     max-width: 600px;
     margin-top: 2rem;
+  }
+
+  .topics {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 
@@ -260,5 +326,9 @@ img {
 
   .hero img {
     max-width: 350px;
+  }
+
+  .topics {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
