--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,23 @@ img {
   margin: 0 auto 2rem;
 }
 
+/* Card */
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #fff;
+  padding: 2rem 1.75rem 2rem 1.75rem;
+  box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.1);
+}
+
+/* Section */
+.section {
+  margin: 4rem 0;
+}
+
 /* ====== NAVBAR ====== */
 .navbar {
   padding: 1rem 2rem;
@@ -255,6 +272,25 @@ img {
   margin: 0.5rem 0;
 }
 
+/* ====== CHAPTERS ====== */
+.chapter-cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2rem;
+  padding: 2rem 0 4rem;
+}
+
+.chapter-cards .card img {
+  width: 130px;
+  margin-top: 1rem;
+}
+
+.chapter-cards .card h3 {
+  font-size: 1.25rem;
+  font-weight: 700;
+  margin: 1rem 0;
+}
+
 /* ====== MEDIA QUERIES ====== */
 /* Screens less than 1200 */
 @media screen and (max-width: 1200px) {
@@ -294,6 +330,10 @@ img {
 
   .topics {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .chapter-cards {
+    grid-template-columns: 1fr;
   }
 }
 
