--- a/css/styles.css
+++ b/css/styles.css
@@ -291,6 +291,36 @@ img {
   margin: 1rem 0;
 }
 
+/* ====== SUMMARY ====== */
+.summary {
+  background: var(--light-color);
+  color: #384653;
+  padding: 4rem 2rem 5rem;
+}
+
+.summary .section-lists {
+  background: #fff;
+  padding: 2rem;
+}
+
+.summary .list-header {
+  background: var(--primary-color);
+  color: #fff;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  font-weight: 700;
+  margin: 1rem 0;
+}
+
+.summary .list-item {
+  padding: 1.4rem 0;
+  border-bottom: 1px solid #f1f4f6;
+}
+
+.summary .list-item:last-child {
+  border-bottom: none;
+}
+
 /* ====== MEDIA QUERIES ====== */
 /* Screens less than 1200 */
 @media screen and (max-width: 1200px) {
@@ -370,5 +400,9 @@ img {
 
   .topics {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .summary .section-lists {
+    padding: 1rem;
   }
 }
