--- a/css/styles.css
+++ b/css/styles.css
@@ -386,6 +386,33 @@ img {
   margin-right: 1rem;
 }
 
+/* ====== DETAILS ====== */
+.details-flex {
+  display: flex;
+  gap: 4rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.details img {
+  width: 100%;
+  max-width: 500px;
+}
+
+.details h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.details .heading-border {
+  margin: 0;
+}
+
+.details p {
+  margin: 1rem 0 2rem;
+}
+
 /* ====== MEDIA QUERIES ====== */
 /* Screens less than 1200 */
 @media screen and (max-width: 1200px) {
@@ -430,6 +457,23 @@ img {
   .chapter-cards,
   .takeaways-cards {
     grid-template-columns: 1fr;
+  }
+
+  .details-flex {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .details-content {
+    text-align: center;
+  }
+
+  .details .heading-border {
+    margin: 0 auto;
+  }
+
+  .details + .details .details-flex {
+    flex-direction: column;
   }
 }
 
