--- a/css/styles.css
+++ b/css/styles.css
@@ -413,6 +413,22 @@ img {
   margin: 1rem 0 2rem;
 }
 
+.details + .details .details-flex {
+  flex-direction: row-reverse;
+}
+
+.details ul {
+  margin-bottom: 2rem;
+}
+
+.details ul li {
+  line-height: 2;
+}
+
+.details i {
+  margin-right: 0.5rem;
+}
+
 /* ====== MEDIA QUERIES ====== */
 /* Screens less than 1200 */
 @media screen and (max-width: 1200px) {
@@ -534,5 +550,9 @@ img {
 
   .summary .section-lists {
     padding: 1rem;
+  }
+
+  .details ul {
+    text-align: left;
   }
 }
