--- a/css/styles.css
+++ b/css/styles.css
@@ -484,6 +484,42 @@ img {
   width: 200px;
 }
 
+/* ====== NEWSLETTER ====== */
+.newsletter {
+  text-align: center;
+  margin: 0 2rem;
+}
+
+.newsletter-flex {
+  background: var(--light-color);
+  border: 1px solid #eee;
+  color: #384653;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 4rem 2rem;
+}
+
+.newsletter h2 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.newsletter p {
+  max-width: 600px;
+}
+
+.newsletter input[type="email"] {
+  padding: 1rem 2rem;
+  border: 1px solid #ccc;
+  border-radius: 32px;
+  margin: 1rem 0;
+  width: 100%;
+  max-width: 400px;
+}
+
 /* ====== MEDIA QUERIES ====== */
 /* Screens less than 1200 */
 @media screen and (max-width: 1200px) {
@@ -589,6 +625,14 @@ img {
   }
 
   .info-left {
+    display: none;
+  }
+
+  .newsletter h2 {
+    font-size: 1.5rem;
+  }
+
+  .newsletter p {
     display: none;
   }
 }
