feat: footer created

--- a/css/styles.css
+++ b/css/styles.css
@@ -520,6 +520,64 @@ img {
   max-width: 400px;
 }
 
+/* ====== SOCIAL ====== */
+.social {
+  background: var(--dark-color);
+  color: #fff;
+  padding: 6rem 2rem;
+  text-align: center;
+  font-size: 1.7rem;
+  margin-bottom: 0rem;
+}
+
+.social a {
+  color: #fff;
+}
+
+.social a:hover {
+  color: var(--secondary-color);
+}
+
+.social p {
+  margin-bottom: 2rem;
+}
+
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+
+/* ====== FOOTER ====== */
+.footer {
+  background: var(--dark-color);
+  color: #76859a;
+  border-top: 1px solid #384653;
+  padding: 0.5rem 2rem;
+}
+
+.footer-flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer a {
+  color: #76859a;
+}
+
+.footer a:hover {
+  color: var(--secondary-color);
+}
+
+.footer ul {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin: 2rem 0;
+}
+
 /* ====== MEDIA QUERIES ====== */
 /* Screens less than 1200 */
 @media screen and (max-width: 1200px) {
